# AuthorizedHTMLPython

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  alembic.ini  database.py  main.py  register_test.html  templates.py  test_email_sending.py  view.py
src/migrations/: env.py
src/migrations/versions/: 0ec7e8468660_.py  291a885924e7_.py  3b3e647d80c1_.py  4606cc3a7de9_.py  6d6b440370ca_.py  8a359b051083_.py  93a31f0d6ab2_.py  cce57b60e344_.py  d59d053f8bde_.py
src/user/: jwt_repository.py  models.py  repository.py  router.py  schemas.py  test.py  utils.py
templates/: index.html  login.html  password_reset.html  password_update.html  register.html  registration.html  registration_success.html  user_page.html
