[tool.poetry]
name = "authorizedhtmlpython"
version = "0.1.0"
description = ""
authors = ["alex <dr.p163@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
sqlalchemy = "^2.0.43"
python-multipart = "^0.0.20"
uvicorn = "^0.37.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
jinja2 = "^3.1.6"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
ruff = "^0.14.1"
alembic = "^1.17.0"
email-validator = "^2.3.0"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
src = ["src"]
line-length = 100
exclude = [
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".venv",
    "alembic",
]

[tool.ruff.lint]
preview = true
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "E221",
    "E271",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"dependencies.py" = ["E402", "F401", "F403"]

